# AiEcsEngine

./: .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: StrictFlags.cmake
docs/: README.md
engine/: empty.cpp
engine/Application/: Application.cpp  Application.hpp  state_machine.cpp  state_machine.hpp
engine/Assets/: AssetLoader.cpp  AssetLoader.hpp
engine/Console/: ConsoleComponent.hpp  ConsoleSystem.cpp  ConsoleSystem.hpp
engine/ECS/: ComponentStorage.hpp  DamageEventComponent.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  OneFrame.hpp  Signature.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp  TransformComponent.hpp  TypeTraits.hpp  VelocityComponent.hpp  World.cpp  World.hpp  WorldFwd.hpp
engine/Graphics/: RenderSystem2D.cpp  RenderSystem2D.hpp  SpriteComponent.hpp
engine/Input/: InputStateComponent.hpp  InputSystem.cpp  InputSystem.hpp
engine/Physics/: ColliderAABBComponent.hpp  CollisionEvent.hpp  EventQueue.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidBody2DComponent.hpp  TriggerEvent.hpp
engine/Platform/: TimeSystem.cpp  TimeSystem.hpp  WindowResizeEventComponent.hpp  WindowSystem.cpp  WindowSystem.hpp
engine/Platform/Web/: WindowSystem.cpp
engine/Platform/Xbox/: WindowSystem.cpp
engine/Profiling/: Profiler.hpp
examples/: CMakeLists.txt
examples/platformer/: CMakeLists.txt  CameraFollowSystem.cpp  CameraFollowSystem.hpp  Components.hpp  MovementSystem.cpp  MovementSystem.hpp  TileMapSystem.cpp  TileMapSystem.hpp  main.cpp
scripts/: install_toolchains.sh
tests/: AssetLoaderTest.cpp  EcsTest.cpp  PhysicsTest.cpp  ProfilerTest.cpp  StateMachineTest.cpp  SystemPhaseTest.cpp
